--- a/PRU_ADS1278/.project
+++ b/PRU_ADS1278/.project
@@ -27,7 +27,7 @@
 	<variableList>
 		<variable>
 			<name>ORIGINAL_PROJECT_ROOT</name>
-			<value>file:/C:/Users/thoma/CloudStation/School/2MA/semester2/embeddedProj/LinuxSDK/pru-icss-5.1.0/examples/am335x/PRU_RPMsg_Echo_Interrupt0%20-%20Copy</value>
+			<value>file:/C:/Users/Steven/workspace2_BBB/PRU%20code/PRU_ADS1278/PRU_ADS1278</value>
 		</variable>
 	</variableList>
 </projectDescription>
